[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_8kd8q"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_8kd8q")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
alignment = 1
custom_minimum_size = Vector2(240, 0)
theme_override_constants/separation = 16

[node name="HostButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Host Game"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Join Game"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Settings"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
text = "Quit"

[node name="SettingsWindow" type="Window" parent="."]
position = Vector2(480, 240)
size = Vector2(360, 220)
title = "Settings"
visible = false
unresizable = true

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

theme_override_constants/separation = 12

[node name="PlaceholderLabel" type="Label" parent="SettingsWindow/VBoxContainer"]
text = "Settings are coming soon."
horizontal_alignment = 1

[node name="SettingsBackButton" type="Button" parent="SettingsWindow/VBoxContainer"]
text = "Back"

[resource]
